--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 .ipynb_checkpoints/Avancement_projet_Anomalies_17_mars-checkpoint.ipynb
+.ipynb_checkpoints/Découverte jeux de données-checkpoint.ipynb
+.ipynb_checkpoints/Ondelettes-checkpoint.ipynb
