Récup listes appr et test

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 .ipynb_checkpoints/Avancement_projet_Anomalies_17_mars-checkpoint.ipynb
 .ipynb_checkpoints/Découverte jeux de données-checkpoint.ipynb
 .ipynb_checkpoints/Ondelettes-checkpoint.ipynb
+.ipynb_checkpoints/Features -checkpoint.ipynb
+.ipynb_checkpoints/Lecture et nettoyage des données-checkpoint.ipynb
+.ipynb_checkpoints/Lecture et nettoyage des données-checkpoint.ipynb
