--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 .ipynb_checkpoints/Features -checkpoint.ipynb
 .ipynb_checkpoints/Lecture et nettoyage des données-checkpoint.ipynb
 .ipynb_checkpoints/Lecture et nettoyage des données-checkpoint.ipynb
+.ipynb_checkpoints/Lecture et nettoyage des données-checkpoint.ipynb
+.ipynb_checkpoints/Ondelettes-checkpoint.ipynb
