Upload notebook Application_article

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 .ipynb_checkpoints/Lecture et nettoyage des données-checkpoint.ipynb
 .ipynb_checkpoints/Lecture et nettoyage des données-checkpoint.ipynb
 .ipynb_checkpoints/Ondelettes-checkpoint.ipynb
+.ipynb_checkpoints/Application_article-checkpoint.ipynb
+.ipynb_checkpoints/Ondelettes-checkpoint.ipynb
